--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,52 @@
 <!doctype html>
-
 <html lang="en">
+
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		{% seo %}
+		<title>{{ page.title }} &middot; {{ site.title }}</title>
 
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
-		<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet">
 
-		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-				ga('create', '{{ site.google_analytics_key }}', 'auto');
-				ga('send', 'pageview');
-			</script>
-			<script async src='https://www.google-analytics.com/analytics.js'></script>
-		{% endif %}
+
+		<!-- {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+		<script>
+			window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+			ga('create', '{{ site.google_analytics_key }}', 'auto');
+			ga('send', 'pageview');
+		</script>
+		<script async src='https://www.google-analytics.com/analytics.js'></script>
+		{% endif %} -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-		{% if site.snipcart_key %}
-			<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="{{ site.snipcart_key }}"></script>
-		{% endif %}
+
+		<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.css" />
+		<script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
 	</head>
+
 	<body>
+		<div id="snipcart" data-api-key="{{ site.snipcart_key }}" hidden></div>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %} <span>{{ site.title }}</span></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}
+						<span>{{ site.title }}</span></a></div>
 				{% include navigation.html %}
 			</div>
 
 			<section class="hero">
 				<div class="text-container">
 					{% if page.hero %}
-						<h2>{{ page.hero }}</h2>
+					<h2>{{ page.hero }}</h2>
 					{% elsif page.name %}
-						<h2>{{ page.name }}</h2>
+					<h2>{{ page.name }}</h2>
 					{% endif %}
 
 					{% if page.subtitle %}
-						<p>{{ page.subtitle }}</p>
+					<p>{{ page.subtitle }}</p>
 					{% endif %}
 				</div>
 			</section>
@@ -54,7 +57,8 @@
 				<ul class="footer-columns">
 					<li class="about">
 						<div class="company-name">{% include logo.html %} <span>{{ site.title }}</span></div>
-						<p class="editable">Many people have the notion that enlightenment is one state. Many also believe that when it is attained, a person is forever in that state.</p>
+						<p class="editable">Many people have the notion that enlightenment is one state. Many
+							also believe that when it is attained, a person is forever in that state.</p>
 					</li>
 
 					<li class="footer-nav">
@@ -77,18 +81,26 @@
 					<li>
 						<h4>Contact Us</h4>
 						<p>Need help with something? <a href="/contact/">Get in touch</a>.
-						<p class="email"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></p>
+						<p class="email"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>
+						</p>
 						<p><a href="tel:{{ site.author.phone }}">{{ site.author.phone }}</a></p>
 
-						<div class="social-icons">
-							<a class="facebook" href="https://facebook.com/cloudcannon/">{% include social-icon.html icon="Facebook2" %}</a>
-							<a class="twitter" href="https://twitter.com/cloudcannon/">{% include social-icon.html icon="Twitter" %}</a>
-							<a class="youtube" href="https://youtube.com/c/cloudcannon/">{% include social-icon.html icon="YouTube" %}</a>
-							<a class="linkedin" href="https://nz.linkedin.com/company/cloud-cannon">{% include social-icon.html icon="LinkedIn" %}</a>
-						</div>
+						<!-- <div class="social-icons">
+							<a class="facebook"
+								 href="https://facebook.com/cloudcannon/">{% include social-icon.html icon="Facebook2" %}</a>
+							<a class="twitter"
+								 href="https://twitter.com/cloudcannon/">{% include social-icon.html icon="Twitter" %}</a>
+							<a class="youtube"
+								 href="https://youtube.com/c/cloudcannon/">{% include social-icon.html icon="YouTube" %}</a>
+							<a class="linkedin"
+								 href="https://nz.linkedin.com/company/cloud-cannon">{% include social-icon.html icon="LinkedIn" %}</a>
+						</div> -->
 					</li>
 				</ul>
-				<p class="copyright">All Rights Reserved &copy; {{ site.time | date: '%Y' }} {{ site.title }}, Inc. Template by <a href="https://cloudcannon.com">CloudCannon</a></p>
+				<p class="copyright">All Rights Reserved &copy; {{ site.time | date: '%Y' }}
+					{{ site.title }}, Inc. Template by <a target="_blank" rel="noopener noreferrer"
+						 href="https://cloudcannon.com">CloudCannon</a>>
+				</p>
 			</div>
 		</footer>
 		<script>
@@ -99,4 +111,5 @@
 		</script>
 		<script src="{{ site.baseurl }}/js/application.js" type="text/javascript"></script>
 	</body>
+
 </html>
