--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="content">
 	<section class="page">
 		<div class="container">
@@ -18,5 +19,7 @@ layout: default
 	</section>
 </div>
 
-<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="{{ site.api_key }}" id="snipcart"></script>
-<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.css" />
+<script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
+<div id="snipcart" data-api-key="{{ site.snipcart_key }}" hidden>
+</div>
