--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,14 +1,19 @@
 ---
 ---
-@import "mixins/flexbox";
-@import "mixins/columns";
-@import "variables";
-@import "elements";
-@import "layout";
-@import "products";
-@import "staff";
-@import "contact";
-@import "forms";
-@import "navigation";
-@import "footer";
-@import "cloudcannon";
+
+@import 'mixins/flexbox';
+@import 'mixins/columns';
+@import 'variables';
+@import 'elements';
+@import 'layout';
+@import 'products';
+@import 'staff';
+@import 'contact';
+@import 'forms';
+@import 'navigation';
+@import 'footer';
+@import 'cloudcannon';
+
+#snipcart .snipcart-modal__container {
+  z-index: 1000;
+}
