--- a/_includes/snipcart-button.html
+++ b/_includes/snipcart-button.html
@@ -5,11 +5,12 @@
 {% assign colors = colors | remove_first: '|' %}
 <button class="snipcart-add-item" data-item-name="{{ include.product.name }}"
 				data-item-id="{{ include.product.sku }}"
-				data-item-image="{{ include.product.styles.first.image }}"
+				data-item-image="{{ site.baseurl }}{{ include.product.styles.first.image }}"
 				data-item-description="{{ include.product.description }}" data-item-custom1-name="Size"
 				data-item-custom1-options="{{ include.product.sizes | join: '|' }}"
 				data-item-custom1-value="Medium" data-item-custom2-name="Color"
-				data-item-custom2-options="{{ colors }}" data-item-url="{{ include.product.url }}"
+				data-item-custom2-options="{{ colors }}"
+				data-item-url="{{ site.baseurl }}{{ include.product.url }}"
 				data-item-price="{{ include.product.price }}">
 	{% if include.text %}{{ include.text }}{% else %}Add to cart{% endif %}
 </button>
