--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,23 +64,23 @@
 					<li class="footer-nav">
 						<h4>General</h4>
 						<ul>
-							<li><a href="/">Products</a></li>
-							<li><a href="/about/">Our Story</a></li>
-							<li><a href="/contact/">Contact</a></li>
+							<li><a href="/shop/">Products</a></li>
+							<li><a href="{{ site.baseurl}}/about/">Our Story</a></li>
+							<li><a href="{{ site.baseurl}}/contact/">Contact</a></li>
 						</ul>
 					</li>
 
 					<li class="footer-nav">
 						<h4>Help</h4>
 						<ul>
-							<li><a href="/shipping/">Shipping</a></li>
-							<li><a href="/returns/">Returns</a></li>
+							<li><a href="{{ site.baseurl}}/shipping/">Shipping</a></li>
+							<li><a href="{{ site.baseurl}}/returns/">Returns</a></li>
 						</ul>
 					</li>
 
 					<li>
 						<h4>Contact Us</h4>
-						<p>Need help with something? <a href="/contact/">Get in touch</a>.
+						<p>Need help with something? <a href="{{ site.baseurl}}/contact/">Get in touch</a>.
 						<p class="email"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>
 						</p>
 						<p><a href="tel:{{ site.author.phone }}">{{ site.author.phone }}</a></p>
@@ -99,7 +99,7 @@
 				</ul>
 				<p class="copyright">All Rights Reserved &copy; {{ site.time | date: '%Y' }}
 					{{ site.title }}, Inc. Template by <a target="_blank" rel="noopener noreferrer"
-						 href="https://cloudcannon.com">CloudCannon</a>>
+						 href="https://cloudcannon.com">CloudCannon</a>
 				</p>
 			</div>
 		</footer>
