--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
 	<body>
 		<div id="snipcart" data-api-key="{{ site.snipcart_key }}" hidden></div>
-		<header>
+		<header data-test-name="header">
 			<div class="container">
 				<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}
 						<span>{{ site.title }}</span></a></div>
