Add data attribute for footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 			</section>
 		</header>
 		{{ content }}
-		<footer>
+		<footer data-test-name="verify footer">
 			<div class="container">
 				<ul class="footer-columns">
 					<li class="about">
